--- a/public/en/404.html
+++ b/public/en/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-EN">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,7 +17,7 @@
 
 
   
-  <meta property="og:url" content="http://localhost:1313/en/404.html">
+  <meta property="og:url" content="https://chriscomputing.de/en/404.html">
   <meta property="og:site_name" content="Blog from chriscomputing">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:locale" content="en_EN">
@@ -55,7 +55,7 @@
 
   <a href="/en/blog/">Blog</a>
 
-<a href='http://localhost:1313/index.xml'>RSS</a>
+<a href='https://chriscomputing.de/index.xml'>RSS</a>
 
 
 
